--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ uvicorn==0.27.1
 websockets
 httpx
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz
+transformers
+langchain_openai
+langchain
+langchain-core==0.1.27
+langchain-groq==0.2.1
