--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,5 @@ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0
 transformers
 langchain_openai
 langchain
-langchain-core==0.1.27
+langchain-core>=0.3.15,<0.4.0
 langchain-groq==0.2.1
