--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+utils
 spacy==3.7.4
 python-dotenv
 google-auth==2.27.0
@@ -12,3 +13,8 @@ uvicorn==0.27.1
 websockets
 httpx
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz
+transformers
+langchain_openai
+langchain
+langchain-core>=0.3.15,<0.4.0
+langchain-groq==0.2.1
